# wiki_xml_dump_xerces

./: CMakeLists.txt  README.md
src/examples/countPages/: main_countPages.cpp
src/examples/printTitles/: CMakeLists.txt  filePaths.hpp.in  main_printTitleParallel.cpp  main_printTitleSingleCore.cpp
src/examples/printTitles/dummyData/: French_Revolution.xml  World_War_II.xml
src/handlers/: abstractWikiPageHandler.hpp  basicTitleFilters.hpp  countPagesXercesHandler.hpp  wikiDumpHandlerProperties.hpp  wikiDumpXercesHandler.hpp  wikiPageData.hpp
src/parsers/: parallelParser.hpp  singleCoreParser.hpp
